--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -946,7 +946,7 @@
  	 	 	 	 	"eng": "Give Street Cred"
  	 	 	 	},
  	 	 	 	"report": {
- 	 	 	 	 	"trans": "運営に報告する",
+ 	 	 	 	 	"trans": "通報する",
  	 	 	 	 	"eng": "Report Player"
  	 	 	 	}
  	 	 	},
@@ -2348,7 +2348,7 @@
  	 	 	"eng": "Quick Slot"
  	 	},
  	 	"receives": {
- 	 	 	"trans": "受信",
+ 	 	 	"trans": "獲得報酬",
  	 	 	"eng": "Receives"
  	 	},
  	 	"inputPlaceholder": {
@@ -4166,7 +4166,7 @@
  	 	 	 	"eng": "locked container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "生体認証による暗号化ロックが施された強化コンテナ. 中には重要なアイテムが入っているらしい. \r\n         幸運なことに, 搭載されているマイクロコンピュータは侵入可能な古いファームウェアで動作している.[ターミナル]からロック解除が可能.",
+ 	 	 	 	"trans": "生体認証による暗号化ロックが施された強化コンテナ. 中には重要なアイテムが入っているらしい. \r\n         幸い, 搭載されているマイクロコンピュータは古いファームウェアで動作しており, 侵入が可能だ. [ターミナル]でアンロックできる.",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -4176,7 +4176,7 @@
  	 	 	 	"eng": "locked rare container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "生体認証による暗号化ロックが施された強化コンテナ. 中には重要なアイテムが入っているらしい. \r\n         幸運なことに, 搭載されているマイクロコンピュータは侵入可能な古いファームウェアで動作している.[ターミナル]からロック解除が可能.",
+ 	 	 	 	"trans": "生体認証による暗号化ロックが施された強化コンテナ. 中には重要なアイテムが入っているらしい. \r\n         幸い, 搭載されているマイクロコンピュータは古いファームウェアで動作しており, 侵入が可能だ. [ターミナル]でアンロックできる.",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -4186,7 +4186,7 @@
  	 	 	 	"eng": "locked legendary container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "生体認証による暗号化ロックが施された強化コンテナ. 中には重要なアイテムが入っているらしい. \r\n         幸運なことに, 搭載されているマイクロコンピュータは侵入可能な古いファームウェアで動作している.[ターミナル]からロック解除が可能.",
+ 	 	 	 	"trans": "生体認証による暗号化ロックが施された強化コンテナ. 中には重要なアイテムが入っているらしい. \r\n         幸い, 搭載されているマイクロコンピュータは侵入可能な古いファームウェアで動作しており, 侵入が可能だ. [ターミナル]でアンロックできる.",
  	 	 	 	"eng": "A reinforced container with biometric encryption lock, it seems to contain important items inside.\r\n        Luckily the on board micro computer is running on out-dated firmware, where an exploit is possible, go to [Terminal] to unlock this container"
  	 	 	}
  	 	},
@@ -6602,10 +6602,10 @@
  	 	 	 	}
  	 	 	},
  	 	 	"kick": {
- 	 	 	 	"trans": "キック",
+ 	 	 	 	"trans": "除名",
  	 	 	 	"eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "ギャングから他のプレイヤーを除名します.",
+ 	 	 	 	 	"trans": "ギャングからプレイヤーを除名します.",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
@@ -6743,11 +6743,11 @@
  	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
  	 	 	},
  	 	 	"activate": {
- 	 	 	 	"trans": "今すぐブースト",
+ 	 	 	 	"trans": "今すぐブーストを起動する",
  	 	 	 	"eng": "Boost now"
  	 	 	},
  	 	 	"enableBoost": {
- 	 	 	 	"trans": "報酬のブーストを有効にする",
+ 	 	 	 	"trans": "報酬をブーストする",
  	 	 	 	"eng": "Enable reward boost"
  	 	 	}
  	 	},
