--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -852,7 +852,7 @@
  	 	 	 	"eng": "title"
  	 	 	},
  	 	 	"gearScore": {
- 	 	 	 	"trans": "Livello equipaggiamento",
+ 	 	 	 	"trans": "Punteggio Equipaggiamento",
  	 	 	 	"eng": "Gear Score"
  	 	 	},
  	 	 	"location": {
