--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -6203,25 +6203,25 @@
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
- 	 	 	 	"Love you",
- 	 	 	 	"You guys are great",
- 	 	 	 	"You guys are the best",
- 	 	 	 	"love yall",
- 	 	 	 	"You are amazing",
- 	 	 	 	"we are best friend",
- 	 	 	 	"Love you all",
- 	 	 	 	"you are great",
- 	 	 	 	"you the best",
- 	 	 	 	"we are awesome",
- 	 	 	 	"you are awesome",
- 	 	 	 	"have a nice day",
- 	 	 	 	"miss you",
- 	 	 	 	"miss you guys",
+ 	 	 	 	"Seni seviyorum",
+ 	 	 	 	"Siz harika birisiniz",
+ 	 	 	        "Siz en iyisisiniz",
+ 	 	 	 	"Sizi seviyorum",
+ 	 	 	 	"İnanılmazsın",
+ 	 	 	 	"En iyi arkadaşız",
+ 	 	 	 	"Hepinizi seviyorum",
+ 	 	 	 	"Harikasın",
+ 	 	 	 	"En iyisisin",
+ 	 	 	 	"Harikayız",
+ 	 	 	 	"Harikasın",
+ 	 	 	 	"İyi günler",
+ 	 	 	 	"Seni özlüyorum",
+ 	 	 	 	"Sizi özlüyorum",
  	 	 	 	"KYAAAAAAAAA",
- 	 	 	 	"wish you have nice day",
- 	 	 	 	"I love you",
- 	 	 	 	"can we hug?",
- 	 	 	 	"how much you love me?"
+ 	 	 	 	"Umarım günün güzel geçer",
+ 	 	 	 	"Seni seviyorum",
+ 	 	 	 	"Sarılabilir miyiz?",
+ 	 	 	 	"Beni ne kadar seviyorsun?"
  	 	 	],
  	 	 	"eng": [
  	 	 	 	"Love you",
@@ -6259,7 +6259,7 @@
  	 	},
  	 	"gangShortNameInput": {
  	 	 	"title": {
- 	 	 	 	"trans": "Çete günü",
+ 	 	 	 	"trans": "Çete etiketi",
  	 	 	 	"eng": "Gang Tag"
  	 	 	},
  	 	 	"description": {
@@ -6268,7 +6268,7 @@
  	 	 	}
  	 	},
  	 	"createButton": {
- 	 	 	"trans": "Çete yaratmak",
+ 	 	 	"trans": "Çete kur",
  	 	 	"eng": "Create gang"
  	 	},
  	 	"error": {
@@ -6325,12 +6325,12 @@
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
- 	 	 	 	"trans": "2. bitti, bu!",
+ 	 	 	 	"trans": "2. bitti, bu kadar!",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
  	 	"footnote1": {
- 	 	 	"trans": "*Arkadaşınız birim satın aldığında% 10 bonus birim alırsınız",
+ 	 	 	"trans": "*Arkadaşınız birim satın aldığında %10 bonus birim alırsınız",
  	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
  	 	},
  	 	"footnote2": {
@@ -6357,7 +6357,7 @@
  	 	 	}
  	 	},
  	 	"report": {
- 	 	 	"trans": "Rapor ve Blok",
+ 	 	 	"trans": "Rapor ve Engelle",
  	 	 	"eng": "report and block"
  	 	},
  	 	"error": {
@@ -6388,15 +6388,15 @@
  	 	 	 	}
  	 	 	},
  	 	 	"kick": {
- 	 	 	 	"trans": "Tekme atmak",
- 	 	 	 	"eng": "Kick",
+ 	 	 	 	"trans": "Atmak",
+                                "eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Çetenizden diğer oyuncuları tekmeleyin.",
+ 	 	 	 	 	"trans": "Çetenizden diğer oyuncuları atın.",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
  	 	 	"manage": {
- 	 	 	 	"trans": "Üstesinden gelmek",
+ 	 	 	 	"trans": "Yönetmek",
  	 	 	 	"eng": "Manage",
  	 	 	 	"description": {
  	 	 	 	 	"trans": "Bu oyuncunun diğer oyuncuların iznini yönetmesine izin verin",
@@ -6497,7 +6497,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Eylem için gereken süreyi%40 azaltın, istiflenebilir%80'e kadar",
+ 	 	 	 	"trans": "Eylem için gereken süreyi %40 azaltın, %80'e kadar birikebilir",
  	 	 	 	"eng": "Reduce time needed for action by 40%, stackable upto 80%"
  	 	 	},
  	 	 	"activate": {
@@ -6507,7 +6507,7 @@
  	 	},
  	 	"extendButton": {
  	 	 	"activatedTitle": {
- 	 	 	 	"trans": "Ödül Boost (etkinleştirildi)",
+ 	 	 	 	"trans": "Ödül Artışı (etkinleştirildi)",
  	 	 	 	"eng": "Reward Boost (Activated)"
  	 	 	},
  	 	 	"notActivatedTitle": {
@@ -6518,14 +6518,14 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Etkinleştirilmiş artırın, bu görev için etkinleştirmek için aşağıdaki onay kutusunu işaretlemelisiniz",
+ 	 	 	 	"trans": "Artırma etkinleştirildi, bu görevde kullanmak için aşağıdaki onay kutusunu işaretlemelisiniz",
  	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
  	 	 	},
  	 	 	"notActivatedDescription": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Öğeleri iki katına çıkarın ve exp! Süre ve maliyet 4 kat artacak",
+ 	 	 	 	"trans": "Öğeleri ve başarımı iki katına çıkarın! Süre ve maliyet 4 kat artacak",
  	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
  	 	 	},
  	 	 	"activate": {
