--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -2708,7 +2708,7 @@
  	 	 	 	"eng": "Animals Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Aumenta il danno inflitto ai nemici della gang Animals",
+ 	 	 	 	"trans": "Aumenta il danno inflitto ai nemici della gang degli Animals",
  	 	 	 	"eng": "Increases damage to Enemies of Animals gang"
  	 	 	}
  	 	},
@@ -2728,7 +2728,7 @@
  	 	 	 	"eng": "Scavengers Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Aumenta i danni ai nemici della banda di spazzini",
+ 	 	 	 	"trans": "Aumenta i danni ai nemici della banda degli Sciacalli",
  	 	 	 	"eng": "Increases damage to Enemies of Scavengers gang"
  	 	 	}
  	 	},
@@ -2738,7 +2738,7 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "I nemici delle bande spavengers danno un aumento dei danni a te",
+ 	 	 	 	"trans": "I nemici della banda degli Sciacalli danno un aumento dei danni a te",
  	 	 	 	"eng": "Enemies of Scavengers gang deals increased damage to you"
  	 	 	}
  	 	},
@@ -3689,7 +3689,7 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "dà un aumento dei danni alla banda degli animali. Riceve un aumento dei danni dalla banda di spavengers.",
+ 	 	 	 	"trans": "dà un aumento dei danni alla banda degli Animali. Riceve un aumento dei danni dalla banda degli Sciacalli.",
  	 	 	 	"eng": "deals increased damage to Animals gang. receives increased damage from Scavengers gang."
  	 	 	}
  	 	},
@@ -3709,7 +3709,7 @@
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Dare un aumento dei danni alla banda di spavengers. Riceve un aumento dei danni dalla banda dei ragazzi voodoo.",
+ 	 	 	 	"trans": "Dare un aumento dei danni alla banda degli Sciacalli. Riceve un aumento dei danni dalla banda dei ragazzi voodoo.",
  	 	 	 	"eng": "deals increased damage to Scavengers gang. receives increased damage from Voodoo Boys gang."
  	 	 	}
  	 	}
@@ -4576,7 +4576,7 @@
  	 	},
  	 	"scavenge": {
  	 	 	"name": {
- 	 	 	 	"trans": "Abilità di scavende",
+ 	 	 	 	"trans": "Abilità di saccheggio",
  	 	 	 	"eng": "scavenge skill"
  	 	 	}
  	 	},
@@ -5001,7 +5001,7 @@
  	 	},
  	 	"gang3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Spazzine",
+ 	 	 	 	"trans": "Sciacalli",
  	 	 	 	"eng": "Scavengers"
  	 	 	}
  	 	}
@@ -5146,14 +5146,14 @@
  	 	 	 	"vars": [
  	 	 	 	 	"zoneName"
  	 	 	 	],
- 	 	 	 	"trans": "Scavenge in ${zoneName}",
+ 	 	 	 	"trans": "Saccheggiare in ${zoneName}",
  	 	 	 	"eng": "Scavenge in ${zoneName}"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"zoneName"
  	 	 	 	],
- 	 	 	 	"trans": "[AFK Resource Gather] \r\n                     Cerca in ${zoneName} e scava per articoli utili. \r\n                     Chissà, forse sarai fortunato!",
+ 	 	 	 	"trans": "[AFK Resource Gather] \r\n                     Cerca in ${zoneName} e rovista per articoli utili. \r\n                     Chissà, forse sarai fortunato!",
  	 	 	 	"eng": "[AFK Resource Gather]\r\n                    Search around in ${zoneName} and scavenge for useful items.\r\n                    Who knows, maybe you'll get lucky!"
  	 	 	}
  	 	}
