termine traduzione tutorial

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -1193,12 +1193,12 @@
  	 	 	},
  	 	 	"globalQuest": {
  	 	 	 	"progressTitle": {
- 	 	 	 	 	"trans": "Violazione della fortezza dati SL",
+ 	 	 	 	 	"trans": "Violazione della Fortezza dei Dati SL",
  	 	 	 	 	"eng": "SL-Data Fortress Breach"
  	 	 	 	},
  	 	 	 	"infoBox": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Hacking del cyberspazio in corso",
+ 	 	 	 	 	 	"trans": "Violazione del cyberspazio in corso",
  	 	 	 	 	 	"eng": "Cyberspace breach in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
@@ -3879,7 +3879,7 @@
  	 	},
  	 	"healing2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Nanobot di Riparazione degradato",
+ 	 	 	 	"trans": "Nanobot di Riparazione Degradato",
  	 	 	 	"eng": "Degraded Nano Repair Bot"
  	 	 	},
  	 	 	"description": {
@@ -3889,7 +3889,7 @@
  	 	},
  	 	"healing3": {
  	 	 	"name": {
- 	 	 	 	"trans": "Nanobot Medico degradato",
+ 	 	 	 	"trans": "Nanobot Medico Degradato",
  	 	 	 	"eng": "Degraded Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -3929,7 +3929,7 @@
  	 	},
  	 	"healing7": {
  	 	 	"name": {
- 	 	 	 	"trans": "Nanobot Medico di Alta Qualità",
+ 	 	 	 	"trans": "Nanobot Medico d'Alta Qualità",
  	 	 	 	"eng": "High Quality Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
