--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -411,11 +411,11 @@
  	 	},
  	 	"deathScreen": {
  	 	 	"topTitleLeft": {
- 	 	 	 	"trans": "Herida mortal (✖╭╮✖)",
+ 	 	 	 	"trans": "Herida mortal",
  	 	 	 	"eng": "fatal injury"
  	 	 	},
  	 	 	"topTitleRight": {
- 	 	 	 	"trans": "✚Centro Médico✚",
+ 	 	 	 	"trans": "Centro Médico",
  	 	 	 	"eng": "SL Medical Center"
  	 	 	},
  	 	 	"title": {
@@ -6203,23 +6203,23 @@
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
- 	 	 	 	"❤Te Amo❤",
+ 	 	 	 	"Te Amo",
  	 	 	 	"Ustedes son geniales",
  	 	 	 	"Ustedes son los mejores",
- 	 	 	 	"¡Los amo a todos!❤",
+ 	 	 	 	"¡Los amo a todos!",
  	 	 	 	"Son increíbles",
  	 	 	 	"Son mis mejores amigos",
- 	 	 	 	"Los adoro ❤.❤",
+ 	 	 	 	"Los adoro",
  	 	 	 	"Eres genial",
  	 	 	 	"Eres el mejor",
  	 	 	 	"Somos increíbles",
  	 	 	 	"Eres increíble",
  	 	 	 	"Ten un precioso día",
  	 	 	 	"Te extraño mucho",
- 	 	 	 	"Los extraño muchísimo ❤",
+ 	 	 	 	"Los extraño muchísimo",
  	 	 	 	"KYAAAAAAAAA UwU",
  	 	 	 	"Deseo que tengas un bonito día",
- 	 	 	 	"¡Te am❤ mucho!",
+ 	 	 	 	"¡Te am mucho!",
  	 	 	 	"¿Puedo abrazarte?",
  	 	 	 	"¿Cuánto me amas?"
  	 	 	],
