nl.json revision
part 1 to 277

--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -31,14 +31,14 @@
  	 	"clan": {
  	 	 	"selectDepositAmount": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Voer het bedrag in dat u wilt storten",
+ 	 	 	 	 	"trans": "Voer de hoeveelheid in die U wil storten",
  	 	 	 	 	"eng": "Please enter amount you want to deposit"
  	 	 	 	},
  	 	 	 	"detail": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} Bitcoin is een aanbetaling in uw bende-account, dit kan niet worden omgekeerd",
+ 	 	 	 	 	"trans": "${amount} Bitcoin is een aanbetaling in uw bende-account, dit kan niet ongedaan worden gemaakt",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -49,23 +49,23 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Voer alstublieft uw gangmotto in",
+ 	 	 	 	 	 	"trans": "Voer het bende motto in",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Bewerk gang motto",
+ 	 	 	 	 	"trans": "Bewerk bende motto",
  	 	 	 	 	"eng": "Edit Gang Motto"
  	 	 	 	}
  	 	 	},
  	 	 	"updateImage": {
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Update Gangafbeelding",
+ 	 	 	 	 	"trans": "Update de bende-afbeelding",
  	 	 	 	 	"eng": "Update Gang Image"
  	 	 	 	}
  	 	 	},
  	 	 	"level": {
- 	 	 	 	"trans": "Bendelniveau",
+ 	 	 	 	"trans": "Bende niveau",
  	 	 	 	"eng": "Gang Level"
  	 	 	},
  	 	 	"resource": {
@@ -92,20 +92,20 @@
  	 	 	 	"eng": "Next upkeep Date: ${nextUpkeepDate}"
  	 	 	},
  	 	 	"insufficientError": {
- 	 	 	 	"trans": "Resource Critical",
+ 	 	 	 	"trans": "bron kritiek",
  	 	 	 	"eng": "resource critical"
  	 	 	},
  	 	 	"insufficientFound": {
- 	 	 	 	"trans": "Onvoldoende gevonden",
+ 	 	 	 	"trans": "Onvoldoende valuta",
  	 	 	 	"eng": "Insufficient Funds"
  	 	 	},
  	 	 	"insufficientResource": {
- 	 	 	 	"trans": "Onvoldoende hulpbron",
+ 	 	 	 	"trans": "Ontoereikende middelen",
  	 	 	 	"eng": "Insufficient Resources"
  	 	 	},
  	 	 	"occupation": {
  	 	 	 	"noClan": {
- 	 	 	 	 	"trans": "Geen bende heeft dit gebied al bezet",
+ 	 	 	 	 	"trans": "Geen enkele bende heeft dit gebied al bezet",
  	 	 	 	 	"eng": "No gang has occupied this area yet"
  	 	 	 	}
  	 	 	},
@@ -116,11 +116,11 @@
  	 	},
  	 	"communityContentBox": {
  	 	 	"title": {
- 	 	 	 	"trans": "Gemeenschapsgehalte",
+ 	 	 	 	"trans": "Community-inhoud",
  	 	 	 	"eng": "Community Content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Deze inhoud wordt door de Gemeenschap bijgedragen. Klik hier om uw eigen inhoud bij te dragen.",
+ 	 	 	 	"trans": "Deze content wordt door de community bijgedragen. Klik hier om je eigen content bij te dragen",
  	 	 	 	"eng": "This content is contributed by the community. click here to contribute your own content."
  	 	 	}
  	 	},
@@ -128,21 +128,21 @@
  	 	 	"colors": {
  	 	 	 	"win": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Decodering succesvol",
+ 	 	 	 	 	 	"trans": "Decryptie geslaagd",
  	 	 	 	 	 	"eng": "Decryption successful"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "verwerken",
+ 	 	 	 	 	 	"trans": "behandeling",
  	 	 	 	 	 	"eng": "processing"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "U vond een vergrendelde buitdoos met kleurtoetsenbord, u zou het moeten kunnen ontgrendelen met de juiste volgorde van kleuren.",
+ 	 	 	 	 	"trans": "U hebt een vergrendelde doos met een kleurentoetsenblok gevonden. U zou deze moeten kunnen ontgrendelen met de juiste kleurvolgorde.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Ontgrendel voortgang",
+ 	 	 	 	 	 	"trans": "Ontgrendelings voortgang",
  	 	 	 	 	 	"eng": "Unlock progress"
  	 	 	 	 	}
  	 	 	 	},
@@ -151,16 +151,16 @@
  	 	 	 	 	"eng": "seconds"
  	 	 	 	},
  	 	 	 	"colorBox": {
- 	 	 	 	 	"trans": "Klik op deze kleur hieronder",
+ 	 	 	 	 	"trans": "Klik hieronder op deze kleur",
  	 	 	 	 	"eng": "Click on this color below"
  	 	 	 	},
  	 	 	 	"lose": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Decodering mislukt",
+ 	 	 	 	 	 	"trans": "Decryptie mislukte",
  	 	 	 	 	 	"eng": "Decryption failed"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Klik op de juiste kleurenreeks om te ontgrendelen",
+ 	 	 	 	 	 	"trans": "Klik op de juiste kleurvolgorde om te ontgrendelen",
  	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
  	 	 	 	 	},
  	 	 	 	 	"button": {
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Mensen van Oekraïne, Rusland en de hele wereld lijden omdat de ambitie van een man. \\ N maak de liefde, geen oorlog.",
+ 	 	 	 	"trans": "De mensen in Oekraïne, Rusland en de hele wereld lijden onder de ambitie van één man.\\n Exploit love, not war.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -188,7 +188,7 @@
  	 	 	 	"eng": "Deposit"
  	 	 	},
  	 	 	"depositDesc": {
- 	 	 	 	"trans": "Zet bitcoins in bank",
+ 	 	 	 	"trans": "Zet bitcoins in de bank",
  	 	 	 	"eng": "Put Bitcoins into bank"
  	 	 	},
  	 	 	"withdraw": {
@@ -204,7 +204,7 @@
  	 	 	 	"eng": "Deposit Item"
  	 	 	},
  	 	 	"putItemToVaultDesc": {
- 	 	 	 	"trans": "Zet items in je kluis",
+ 	 	 	 	"trans": "Plaats items in je kluis",
  	 	 	 	"eng": "Put items into your vault"
  	 	 	},
  	 	 	"takeItemFromVault": {
@@ -212,7 +212,7 @@
  	 	 	 	"eng": "Withdraw Item"
  	 	 	},
  	 	 	"takeItemFromVaultDesc": {
- 	 	 	 	"trans": "Neem items uit je kluis",
+ 	 	 	 	"trans": "Haal items uit je kluis",
  	 	 	 	"eng": "Take items out from your vault"
  	 	 	},
  	 	 	"upgradeSlot": {
@@ -226,29 +226,29 @@
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "Verhoog het maximale aantal items dat u kunt opslaan in Vault tot ${upgradeToSlot}",
+ 	 	 	 	"trans": "Verhoog het maximale aantal items dat u in de kluis kunt opslaan naar ${upgradeToSlot}",
  	 	 	 	"eng": "Increase the max amount of items you can store in vault to ${upgradeToSlot}"
  	 	 	},
  	 	 	"modal": {
  	 	 	 	"selectDepositItem": {
- 	 	 	 	 	"trans": "Hoeveel wil je in de kluis plaatsen?",
+ 	 	 	 	 	"trans": "Hoeveel wilt u in de kluis plaatsen?",
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "Hoeveel wil je afhalen van de bank?",
+ 	 	 	 	 	"trans": "Hoeveel wilt u afhalen van de bank?",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
- 	 	 	 	 	"trans": "Hoeveel wil je storten?",
+ 	 	 	 	 	"trans": "Hoeveel wilt u storten?",
  	 	 	 	 	"eng": "How much would you like to deposit?"
  	 	 	 	},
  	 	 	 	"selectWithdraw": {
- 	 	 	 	 	"trans": "Hoeveel wil je afhalen?",
+ 	 	 	 	 	"trans": "Hoeveel wilt u afhalen?",
  	 	 	 	 	"eng": "How much would you like to withdraw?"
  	 	 	 	}
  	 	 	},
  	 	 	"noBalance": {
- 	 	 	 	"trans": "Je kunt niet afhalen wanneer je geen balans hebt.",
+ 	 	 	 	"trans": "Je kan niet afhalen wanneer u geen saldo hebt.",
  	 	 	 	"eng": "You can't withdraw when you have no balance."
  	 	 	}
  	 	},
@@ -268,7 +268,7 @@
  	 	 	 	},
  	 	 	 	"tertiary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Vernietigen.",
+ 	 	 	 	 	 	"trans": "Vernietig.",
  	 	 	 	 	 	"eng": "Destruct."
  	 	 	 	 	}
  	 	 	 	}
