Little update tr.json

--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -77,7 +77,7 @@
  	 	 	 	"eng": "funding"
  	 	 	},
  	 	 	"memberCount": {
- 	 	 	 	"trans": "üyeler",
+ 	 	 	 	"trans": "Üyeler",
  	 	 	 	"eng": "members"
  	 	 	},
  	 	 	"occupationPoint": {
@@ -88,11 +88,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextUpkeepDate"
  	 	 	 	],
- 	 	 	 	"trans": "Sonraki Ödeme tarihi: ${nextUpkeepDate}",
+ 	 	 	 	"trans": "Sonraki Ödeme Tarihi: ${nextUpkeepDate}",
  	 	 	 	"eng": "Next upkeep Date: ${nextUpkeepDate}"
  	 	 	},
  	 	 	"insufficientError": {
- 	 	 	 	"trans": "kritik düzey kaynak",
+ 	 	 	 	"trans": "Kritik Düzey Kaynak",
  	 	 	 	"eng": "resource critical"
  	 	 	},
  	 	 	"insufficientFound": {
@@ -132,7 +132,7 @@
  	 	 	 	 	 	"eng": "Decryption successful"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "işleniyor",
+ 	 	 	 	 	 	"trans": "İşleniyor",
  	 	 	 	 	 	"eng": "processing"
  	 	 	 	 	}
  	 	 	 	},
@@ -165,7 +165,7 @@
  	 	 	 	 	},
  	 	 	 	 	"button": {
  	 	 	 	 	 	"title": {
- 	 	 	 	 	 	 	"trans": "Tekrar deneyin",
+ 	 	 	 	 	 	 	"trans": "Tekrar Deneyin",
  	 	 	 	 	 	 	"eng": "Try Again"
  	 	 	 	 	 	}
  	 	 	 	 	}
@@ -180,7 +180,7 @@
  	 	},
  	 	"bank": {
  	 	 	"balance": {
- 	 	 	 	"trans": "bakiye",
+ 	 	 	 	"trans": "Bakiye",
  	 	 	 	"eng": "balance"
  	 	 	},
  	 	 	"deposit": {
@@ -332,19 +332,19 @@
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
- 	 	 	 	"trans": "sohbet",
+ 	 	 	 	"trans": "Sohbet",
  	 	 	 	"eng": "chat"
  	 	 	},
  	 	 	"gang": {
- 	 	 	 	"trans": "çete",
+ 	 	 	 	"trans": "Çete",
  	 	 	 	"eng": "gang"
  	 	 	},
  	 	 	"mail": {
- 	 	 	 	"trans": "posta",
+ 	 	 	 	"trans": "Posta",
  	 	 	 	"eng": "mail"
  	 	 	},
  	 	 	"noti": {
- 	 	 	 	"trans": "bildirim",
+ 	 	 	 	"trans": "Bildirim",
  	 	 	 	"eng": "noti."
  	 	 	}
  	 	},
@@ -385,7 +385,7 @@
  	 	"clanPage": {
  	 	 	"createClan": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "herhangi bir çetenin üyesi değilsin",
+ 	 	 	 	 	"trans": "Herhangi bir çetenin üyesi değilsin",
  	 	 	 	 	"eng": "You are not a member of any gang"
  	 	 	 	},
  	 	 	 	"subtitle": {
@@ -411,7 +411,7 @@
  	 	},
  	 	"deathScreen": {
  	 	 	"topTitleLeft": {
- 	 	 	 	"trans": "ölümcül yara",
+ 	 	 	 	"trans": "Ölümcül Yara",
  	 	 	 	"eng": "fatal injury"
  	 	 	},
  	 	 	"topTitleRight": {
@@ -449,7 +449,7 @@
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "Veya auto üretim yapın ve kalıplarınızı Kara Korsada satın",
+ 	 	 	 	"trans": "Veya auto üretim yapın ve kalıplarınızı Kara Borsada satın",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -5726,7 +5726,7 @@
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"criticalDamageArmor": {
- 	 	 	"trans": "kritik hasarı",
+ 	 	 	"trans": "Kritik hasarı",
  	 	 	"eng": "of Brutality"
  	 	},
  	 	"healingMultiplier": {
@@ -5734,7 +5734,7 @@
  	 	 	"eng": "of Healing"
  	 	},
  	 	"criticalDamageWeapon": {
- 	 	 	"trans": "Kritik hasarı",
+ 	 	 	"trans": "Kritik Hasarı",
  	 	 	"eng": "of Crit Damage"
  	 	},
  	 	"upgradeHealth": {
@@ -5750,11 +5750,11 @@
  	 	 	"eng": "of Shield"
  	 	},
  	 	"upgradeSneaky": {
- 	 	 	"trans": "gizlilik",
+ 	 	 	"trans": "Gizlilik",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"upgradeHealthRegen": {
- 	 	 	"trans": "sağlık yenileme",
+ 	 	 	"trans": "Sağlık yenileme",
  	 	 	"eng": "of Life"
  	 	},
  	 	"upgradeStun": {
@@ -6205,7 +6205,7 @@
  	 	 	"trans": [
  	 	 	 	"Seni seviyorum",
  	 	 	 	"Siz harika birisiniz",
- 	 	 	        "Siz en iyisisiniz",
+        "Siz en iyisisiniz",
  	 	 	 	"Sizi seviyorum",
  	 	 	 	"İnanılmazsın",
  	 	 	 	"En iyi arkadaşız",
