--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -547,7 +547,7 @@
  	 	 	 	 	"eng": "Confirm use skip?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "Küresel hızlandırma, AFK görevinde olan tüm oyuncuları etkiliyecektir"
+ 	 	 	 	 	"trans": "Küresel hızlandırma, AFK görevinde olan tüm oyuncuları etkiliyecektir",
  	 	 	 	 	"eng": "Global Skip will skip the waiting time for all players performing AFK task"
  	 	 	 	}
  	 	 	},
